# pretok

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: config.md  detection.md  pipeline.md  segments.md  translation.md
docs/development/: architecture.md  changelog.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: capabilities.md  detection.md  model-comparison.md  pipeline.md  segments.md  translation.md
src/pretok/: __init__.py  _version.py
src/pretok/capability/: __init__.py  registry.py
src/pretok/config/: __init__.py  loader.py  schema.py
src/pretok/detection/: __init__.py  base.py  composite.py  fasttext_backend.py  langdetect_backend.py
src/pretok/pipeline/: __init__.py  cache.py  core.py
src/pretok/segment/: __init__.py  lexer.py  types.py
src/pretok/translation/: __init__.py  base.py  factory.py  huggingface.py  llm.py
tests/: conftest.py  test_capability.py  test_config.py  test_detection.py  test_init.py  test_integration.py  test_pipeline.py  test_properties.py  test_segment.py  test_translation.py
